--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+<link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Stats preview card component</title>
@@ -15,15 +15,37 @@
   </style>
 </head>
 <body>
+  <div class="wrapper">
+    <div class="container">
+      <img src="./images/image-header-mobile.jpg" alt="" class="hero">
+      <h1 class="title title-1">  Get insights that help your business grow.</h1>
+      <p class="par par-1">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+      </p>
+      <div class="detail-container">
+      <div class="detail detail-1">
+        <h2 class="detail-1a">10k+</h2>
+        <p class="detail-1b">companies</p>
+      </div>
+      <div class="detail detail-2">
+        <h2 class="detail-2a"> 314</h2>
+        <p class="detail-2b">templates</p>
+      </div>
+      <div class="detail detail-3">
+        <h2 class="detail-3a">12m+</h2>
+        <p class="detail-3b"> queries</p>
+      </div>
+    </div>
+  </div>
+</div>
 
-  Get insights that help your business grow.
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
 
-  10k+ companies
-  314 templates
-  12m+ queries
+
+   
+  
+  
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
