--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <p class="detail-heading detail-3b"> queries</p>
       </div>
   </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">demetri selmer</a>.
+  </div>
 </div>
 
 
@@ -46,9 +50,6 @@
   
   
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
 </body>
 </html>
