added more divs to use flex box,set container and other divs to display flex on 960px width,adjust site with flex-box.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 <body>
   <div class="wrapper">
     <div class="container">
+      <div>
       <img src="./images/image-header-mobile.jpg" alt="" class="hero">
+    </div>
+    <div class="main-content">
       <h1 class="title title-1">  Get <span class="key-word"> insights</span> that help your business grow.</h1>
       <p class="par par-1">
         Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.
       </p>
       
+      <div class="detail-wrapper">
       <div class="detail detail-1">
         <h2 class="detail-stat detail-1a">10k+</h2>
         <p class="detail-heading detail-1b">companies</p>
@@ -42,14 +46,6 @@
     Coded by <a href="#">demetri selmer</a>.
   </div>
 </div>
-
-
-
-
-   
-  
-  
-
-  
+</div>  
 </body>
 </html>
