removed a div from html that was a extra contsiner like div,adjusted padding and margin on hero pic and div container.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <div class="wrapper">
     <img src="./images/image-header-mobile.jpg" alt="" class="hero">
     <div class="container">
-    <div class="main-content">
-      <h1 class="title title-1">  Get <span class="key-word"> insights</span> that help your business grow.</h1>
+    
+       <h1 class="title title-1">Get<span class="key-word"> insights</span> that help your business grow.</h1>
       <p class="par par-1">
         Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.
       </p>
       
-      <div class="detail-wrapper">
+      <class class="detail-wrapper">
       <div class="detail detail-1">
         <h2 class="detail-stat detail-1a">10k+</h2>
         <p class="detail-heading detail-1b">companies</p>
@@ -37,8 +37,8 @@
       <div class="detail detail-3">
         <h2 class="detail-stat detail-3a">12m+</h2>
         <p class="detail-heading detail-3b"> queries</p>
-      </div>
-  </div>
+      </div> 
+  </class> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">demetri selmer</a>.
