made some adjustments to wrapper div and continaer div.

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <p class="detail-heading detail-3b"> queries</p>
       </div> 
   </class> 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">demetri selmer</a>.
-  </div>
+  </div> -->
 </div>
 </div>  
 </body>
