--- a/index.html
+++ b/index.html
@@ -19,35 +19,6 @@
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <img src="./images/image-header-mobile.jpg" alt="" class="hero">
-    <div class="container">
-    
-       <h1 class="title title-1">Get<span class="key-word"> insights</span> that help your business grow.</h1>
-      <p class="par par-1">
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-        experience, and overall efficiency.
-      </p>
-      
-      <class class="detail-wrapper">
-      <div class="detail detail-1">
-        <h2 class="detail-stat detail-1a">10k+</h2>
-        <p class="detail-heading detail-1b">companies</p>
-      </div>
-      <div class="detail detail-2">
-        <h2 class="detail-stat detail-2a"> 314</h2>
-        <p class="detail-heading detail-2b">templates</p>
-      </div>
-      <div class="detail detail-3">
-        <h2 class="detail-stat detail-3a">12m+</h2>
-        <p class="detail-heading detail-3b"> queries</p>
-      </div> 
-  </class> 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">demetri selmer</a>.
-  </div> -->
-</div>
-</div>  
+  <div class="wrapper">Content</div>
 </body>
 </html>
