--- a/index.html
+++ b/index.html
@@ -20,5 +20,26 @@
 </head>
 <body>
   <div class="wrapper">Content</div>
+  <h1 class="title title-1">Get<span class="key-word"> insights</span> that help your business grow.</h1>
+      <p class="par par-1">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+      </p>
+      
+      <div class="detail-wrapper">
+      <div class="detail detail-1">
+        <h2 class="detail-stat detail-1a">10k+</h2>
+        <p class="detail-heading detail-1b">companies</p>
+      </div>
+      <div class="detail detail-2">
+        <h2 class="detail-stat detail-2a"> 314</h2>
+        <p class="detail-heading detail-2b">templates</p>
+      </div>
+      <div class="detail detail-3">
+        <h2 class="detail-stat detail-3a">12m+</h2>
+        <p class="detail-heading detail-3b"> queries</p>
+      </div> 
+    </div>
+  </class> 
 </body>
 </html>
