--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
   </style>
 </head>
 <body>
-  <div class="wrapper">Content</div>
+  <img src="./images/image-header-mobile.jpg" alt="" class="hero">
+  <div class="wrapper"> 
   <h1 class="title title-1">Get<span class="key-word"> insights</span> that help your business grow.</h1>
       <p class="par par-1">
         Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.
       </p>
       
-      <div class="detail-wrapper">
+      <div class="stat-wrapper stat-wrapper-1">
       <div class="detail detail-1">
-        <h2 class="detail-stat detail-1a">10k+</h2>
-        <p class="detail-heading detail-1b">companies</p>
+        <h2 class="stat stat-1 ">10k+</h2>
+        <p class="etail detail-1">companies</p>
       </div>
-      <div class="detail detail-2">
-        <h2 class="detail-stat detail-2a"> 314</h2>
-        <p class="detail-heading detail-2b">templates</p>
+      <div class="stat-wrapper stat-wrapper-2">
+        <h2 class="stat stat-2"> 314</h2>
+        <p class="etail detail-2">templates</p>
       </div>
-      <div class="detail detail-3">
-        <h2 class="detail-stat detail-3a">12m+</h2>
-        <p class="detail-heading detail-3b"> queries</p>
+      <div class="stat-wrapper stat-wrapper-3">
+        <h2 class="stat stat-3">12m+</h2>
+        <p class="detail detail-3"> queries</p>
       </div> 
     </div>
-  </class> 
+  </div> 
 </body>
 </html>
