secound attempt at html challenge by robert.

--- a/index.html
+++ b/index.html
@@ -20,23 +20,30 @@
   </style>
 </head>
 <body>
-  <img src="./images/image-header-mobile.jpg" alt="" class="hero">
+
+  <div>
+   <img src="./images/image-header-mobile.jpg" alt="" class="hero">
+  </div>
+
   <div class="wrapper"> 
-  <h1 class="title title-1">Get<span class="key-word"> insights</span> that help your business grow.</h1>
+    <h1 >Get<span> insights</span> that help your business grow.</h1>
   
-      <p class="par par-1">
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-        experience, and overall efficiency.
-      </p>
+    <p>
+      Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      experience, and overall efficiency.
+    </p>
+    <dl>
+      <dt>10k+</dt>
+      <dd> companies</dd>
+
+      <dt> 314</dt>
+      <dd>templates</dd>
+
+      <dt>12m+</dt>
+      <dd> queries</dd>
+    </dl>
     
-        <h2 class="stat stat-1 ">10k+</h2>
-        <p class="detail detail-1">companies</p>
+  </div>
 
-        <h2 class="stat stat-2"> 314</h2>
-        <p class="etail detail-2">templates</p>
-
-        <h2 class="stat stat-3">12m+</h2>
-        <p class="detail detail-3"> queries</p>
-    </div>
 </body>
 </html>
