updated pic alt  and removed pics class.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <div>
-   <img src="./images/image-header-mobile.jpg" alt="" class="hero">
+   <img src="./images/image-header-mobile.jpg" alt="people in a office" >
   </div>
 
   <div class="wrapper"> 
