added div to text content/including stats.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div>
       <img src="./images/image-header-mobile.jpg" alt="people in a office" >
      </div>
-     
+
+     <div>
     <h1 >Get<span> insights</span> that help your business grow.</h1>
   
     <p>
@@ -45,6 +46,7 @@
       <dt>12m+</dt>
       <dd> queries</dd>
     </dl>
+  </div>
     
   </div>
 
