attempted to changes all div tags to appropriate html elements.

--- a/index.html
+++ b/index.html
@@ -23,32 +23,31 @@
 
   
 
-  <div class="wrapper"> 
+  <main class="wrapper"> 
 
-    <div>
+    <figure>
       <img src="./images/image-header-mobile.jpg" alt="people in a office" >
-     </div>
+     </figure>
 
-     <div>
-    <h1 >Get<span> insights</span> that help your business grow.</h1>
-  
-    <p>
-      Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-      experience, and overall efficiency.
-    </p>
-    <dl>
-      <dt>10k+</dt>
-      <dd> companies</dd>
-
-      <dt> 314</dt>
-      <dd>templates</dd>
-
-      <dt>12m+</dt>
-      <dd> queries</dd>
-    </dl>
-  </div>
+     <section>
+      <h1 >Get<span> insights</span> that help your business grow.</h1>
     
-  </div>
+      <p>
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+      </p>
+      <dl>
+        <dt>10k+</dt>
+        <dd> companies</dd>
+
+        <dt> 314</dt>
+        <dd>templates</dd>
+
+        <dt>12m+</dt>
+        <dd> queries</dd>
+      </dl>
+    </section>    
+  </main>
 
 </body>
 </html>
