added parent divs to dd and dt pairs in html.

--- a/index.html
+++ b/index.html
@@ -34,22 +34,33 @@
      </figure>
 
      <section>
-      <h1 >Get<span> insights</span> that help your  business grow.</h1>
+
+      <h1>
+        Get<span> insights</span> that help your  business grow.
+      </h1>
     
       <p>
         Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.
       </p>
+
       <dl>
+        <div>
         <dt>10k+</dt>
         <dd> companies</dd>
+      </div>
 
+      <div>
         <dt> 314</dt>
         <dd>templates</dd>
+      </div>
 
+      <div>
         <dt>12m+</dt>
-        <dd> queries</dd>
+        <dd>queries</dd>
+      </div>
       </dl>
+
     </section>    
   </main>
 
