changed text on stat to medium.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   
 
-  <main class="wrapper"> 
+  <main> 
 
     <figure>
       <img src="./images/image-header-mobile.jpg" alt="people in a office" >
